@@ -12,6 +12,8 @@
 
 #include <QtCore/QDebug>
 #include <QtGui/QColor>
+#include <QtGui/QBrush>
+#include <QtGui/QPen>
 #include <QtGui/QPixmap>
 #include <QtGui/QRadialGradient>
 
@@ -79,7 +81,9 @@ void MarbleGeoDataPlugin::initialize ()
     dataFacade()->geoDataModel()->addGeoDataFile( GEODATA_DATA_PATH "/germany.kml" );
     dataFacade()->geoDataModel()->addGeoDataFile( GEODATA_DATA_PATH "/poland.kml" );
     dataFacade()->geoDataModel()->addGeoDataFile( GEODATA_DATA_PATH "/czech.kml" );
-    m_currentColor = QColor( 0xff, 0x0, 0x0 );
+    dataFacade()->geoDataModel()->addGeoDataFile( GEODATA_DATA_PATH "/Rabet.kml" );
+    m_currentBrush = QColor( 0xff, 0x0, 0x0 );
+    m_currentPen = QColor( 0xff, 0x0, 0x0 );
 }
 
 bool MarbleGeoDataPlugin::isInitialized () const
@@ -87,24 +91,60 @@ bool MarbleGeoDataPlugin::isInitialized () const
     return true;
 }
 
+void MarbleGeoDataPlugin::setBrushStyle( GeoPainter *painter, GeoDataDocument* root, QString mapped )
+{
+    if( root->style( mapped ) && root->style( mapped )->polyStyle() ) {
+        if( m_currentBrush.color() != root->style( mapped )->polyStyle()->color() ) {
+            qDebug() << "BrushColor:" << root->style( mapped )->polyStyle()->color() << m_currentBrush.color();
+            m_currentBrush.setColor( root->style( mapped )->polyStyle()->color() );
+            painter->setBrush( m_currentBrush );
+        }
+    }
+}
+
+void MarbleGeoDataPlugin::setPenStyle( GeoPainter *painter, GeoDataDocument* root, QString mapped )
+{
+    if( root->style( mapped ) && root->style( mapped )->lineStyle() ) {
+        if( m_currentPen.color() != root->style( mapped )->lineStyle()->color() || 
+            m_currentPen.widthF() != root->style( mapped )->lineStyle()->width() ) {
+            qDebug() << "PenColor:" << root->style( mapped )->lineStyle()->color() << m_currentPen.color();
+            qDebug() << "PenWidth:" << root->style( mapped )->lineStyle()->width() << m_currentPen.widthF();
+            m_currentPen.setColor( root->style( mapped )->lineStyle()->color() );
+            m_currentPen.setWidthF( root->style( mapped )->lineStyle()->width() );
+            painter->setPen( m_currentPen );
+        }
+    }
+}
+
 bool MarbleGeoDataPlugin::renderGeoDataGeometry( GeoPainter *painter, GeoDataGeometry *object, QString styleUrl )
 {
+    painter->save();
+    painter->autoMapQuality();
+
     GeoDataDocument* root = dataFacade()->geoDataModel()->geoDataRoot();
 /// hard coded to use only the "normal" style
     QString mapped = root->styleMap( styleUrl.remove( '#' ) )->value( QString( "normal" ) );
-    mapped.remove('#');
-
+    mapped.remove( '#' );
     if( object->geometryId() == GeoDataPolygonId ) {
-        if( m_currentColor != root->style( mapped )->polyStyle()->color() ) {
-            m_currentColor = root->style( mapped )->polyStyle()->color();
-            painter->setBrush( m_currentColor );
-        };
+        setBrushStyle( painter, root, mapped );
+        setPenStyle( painter, root, mapped );
         painter->drawPolygon( dynamic_cast<GeoDataPolygon*>( object )->outerBoundary() );
     }
     if( object->geometryId() == GeoDataLinearRingId ) {
-        painter->drawPolyline( *dynamic_cast<GeoDataLinearRing*>( object ) );
+        painter->setBrush( QColor( 0, 0, 0, 0 ) );
+        setPenStyle( painter, root, mapped );
+        painter->drawPolygon( *dynamic_cast<GeoDataLinearRing*>( object ) );
     }
-
+    if( object->geometryId() == GeoDataLineStringId ) {
+        setPenStyle( painter, root, mapped );
+        painter->drawPolyline( *dynamic_cast<GeoDataLineString*>( object ) );
+    }
+    if( object->geometryId() == GeoDataMultiGeometryId ) {
+        painter->restore();
+        
+        painter->save();
+    }
+    painter->restore();
     return true;
 }
 
