@@ -2,19 +2,7 @@
 <kml xmlns="http://earth.google.com/kml/2.2">
 <Document>
 	<name>Poland-map.kml</name>
-	<Style id="plstyle1">
-		<IconStyle>
-			<scale>1.3</scale>
-			<Icon>
-				<href>http://maps.google.com/mapfiles/kml/pushpin/ylw-pushpin.png</href>
-			</Icon>
-			<hotSpot x="20" y="2" xunits="pixels" yunits="pixels"/>
-		</IconStyle>
-		<PolyStyle>
-			<outline>0</outline>
-		</PolyStyle>
-	</Style>
-	<Style id="plstyle2">
+	<Style id="plstyle20">
 		<IconStyle>
 			<scale>1.1</scale>
 			<Icon>
@@ -22,32 +10,51 @@
 			</Icon>
 			<hotSpot x="20" y="2" xunits="pixels" yunits="pixels"/>
 		</IconStyle>
+		<LineStyle>
+			<color>ffff55aa</color>
+		</LineStyle>
 		<PolyStyle>
+			<color>7fffaaff</color>
 			<outline>0</outline>
 		</PolyStyle>
 	</Style>
-	<StyleMap id="map-plstyle">
+	<Style id="plstyle10">
+		<IconStyle>
+			<scale>1.3</scale>
+			<Icon>
+				<href>http://maps.google.com/mapfiles/kml/pushpin/ylw-pushpin.png</href>
+			</Icon>
+			<hotSpot x="20" y="2" xunits="pixels" yunits="pixels"/>
+		</IconStyle>
+		<LineStyle>
+			<color>ffff55aa</color>
+		</LineStyle>
+		<PolyStyle>
+			<color>7fffaaff</color>
+			<outline>0</outline>
+		</PolyStyle>
+	</Style>
+	<StyleMap id="map-plstyle0">
 		<Pair>
 			<key>normal</key>
-			<styleUrl>#plstyle2</styleUrl>
+			<styleUrl>#plstyle20</styleUrl>
 		</Pair>
 		<Pair>
 			<key>highlight</key>
-			<styleUrl>#plstyle1</styleUrl>
+			<styleUrl>#plstyle10</styleUrl>
 		</Pair>
 	</StyleMap>
 	<Placemark>
 		<name>Poland</name>
 		<description>This is the description of Poland</description>
-		<styleUrl>#map-plstyle</styleUrl>
+		<styleUrl>#map-plstyle0</styleUrl>
 		<Polygon>
 			<extrude>1</extrude>
 			<tessellate>1</tessellate>
-			<altitudeMode>relativeToGround</altitudeMode>
 			<outerBoundaryIs>
 				<LinearRing>
 					<coordinates>
-14.20836929242294,53.96800739651322,9.999999999999998 13.95567825452436,53.72305396266369,9.999999999999998 14.23246686462305,53.71073744818122,9.999999999999998 14.4932808085603,53.20905652187469,9.999999999999998 14.10994127272899,52.87968515635188,9.999999999999998 14.61899923738535,52.56249996380388,9.999999999999998 14.73689066024957,52.13117798047203,9.999999999999998 14.78742360234828,51.52154725011579,9.999999999999998 14.72171626571382,50.85313986407172,9.999999999999998 14.98834380044683,50.86906643719593,9.999999999999998 15.0005753031197,50.98822162076294,9.999999999999998 15.2643399911873,50.96899654395492,9.999999999999998 15.39585100597901,50.78203544389281,9.999999999999998 15.92375818692055,50.67610564681247,9.999999999999998 16.23387621381396,50.64874659448364,9.999999999999998 16.41724139467303,50.58466917962758,9.999999999999998 16.20814068769018,50.43251131281313,9.999999999999998 16.69300614122732,50.09913901716746,9.999999999999998 17.01978746608216,50.23707789293351,9.999999999999998 16.87765339045117,50.40763446797394,9.999999999999998 16.87766865223679,50.43690350469472,9.999999999999998 17.44889710498788,50.26155490950591,9.999999999999998 17.70452024630369,50.31468106712745,9.999999999999998 17.75688267137448,50.22322956837992,9.999999999999998 17.60045488469628,50.16132996554931,9.999999999999998 17.87679540655047,49.95360143379026,9.999999999999998 18.03642925161724,50.03358377193086,9.999999999999998 18.56286531146114,49.9043925016492,9.999999999999998 18.84980000370187,49.52248301924221,9.999999999999998 19.19439190987983,49.41841518090882,9.999999999999998 19.47437875449597,49.61416678081866,9.999999999999998 19.76536000308687,49.40056768556595,9.999999999999998 19.77269127883558,49.21027016834837,9.999999999999998 20.06385223339915,49.19312979179767,9.999999999999998 20.3806721565384,49.41377696781503,9.999999999999998 20.91811345254335,49.31853587880599,9.999999999999998 21.0827213014834,49.40939308751065,9.999999999999998 21.5952450710535,49.43402341447745,9.999999999999998 22.04335521531638,49.26212713013246,9.999999999999998 22.52848772142987,49.08136284738714,9.999999999999998 22.89033746691035,49.01416281064083,9.999999999999998 22.72978034347045,49.1748127619081,9.999999999999998 22.65747431283516,49.51637421519234,9.999999999999998 23.62690362071646,50.30942491656871,9.999999999999998 24.02332425374827,50.39017607981684,9.999999999999998 24.05954566834723,50.70885131865828,9.999999999999998 23.63558584275383,51.4991698236445,9.999999999999998 23.53420712064167,51.74505003230551,9.999999999999998 23.6663209923618,52.027769184074,9.999999999999998 23.19677310332287,52.2556551988884,9.999999999999998 23.5237108769084,52.57485469237736,9.999999999999998 23.95486053509359,52.6936865358595,9.999999999999998 23.90285331670409,53.14481745351296,9.999999999999998 23.52641492082142,53.93123129936039,9.999999999999998 23.42571932257906,54.18500282853847,9.999999999999998 22.85854097432528,54.40302222236617,9.999999999999998 22.80361546989329,54.3732875407666,9.999999999999998 21.43222608644395,54.3254598149375,9.999999999999998 19.63282868389118,54.45946986155565,9.999999999999998 19.49331246614281,54.38919146693009,9.999999999999998 19.35342837638731,54.36185401260745,9.999999999999998 19.16313806945453,54.3379907157755,9.999999999999998 18.99039603800854,54.34004948606086,9.999999999999998 18.7970501929281,54.35841634443474,9.999999999999998 18.63292723445576,54.41206258190647,9.999999999999998 18.54851899737413,54.52738226374592,9.999999999999998 18.52020564844972,54.65000079099997,9.999999999999998 18.40267650832594,54.74369618510803,9.999999999999998 18.42628929278024,54.77180183173129,9.999999999999998 18.63262048647626,54.70717449102951,9.999999999999998 18.81651450273873,54.60359091558659,9.999999999999998 18.84641091449075,54.61501524664887,9.999999999999998 18.75567335396801,54.67213296390388,9.999999999999998 18.58404447475638,54.74536008893685,9.999999999999998 18.3284895559939,54.82394824557197,9.999999999999998 18.11533116416851,54.8321189578313,9.999999999999998 17.90363861851704,54.82373784814909,9.999999999999998 17.5136065760715,54.75558122874279,9.999999999999998 17.08058643889143,54.67937507288313,9.999999999999998 16.82068737873435,54.57236247924572,9.999999999999998 16.60469166424747,54.54308572843939,9.999999999999998 16.46128823198309,54.50464958646638,9.999999999999998 16.16670244278508,54.28887606797408,9.999999999999998 15.94158690609389,54.25357394210936,9.999999999999998 15.3196047544306,54.13577072152809,9.999999999999998 14.9265246914733,54.0623393360287,9.999999999999998 14.67253548594002,54.01517524914691,9.999999999999998 14.45669277211209,53.93436131402619,9.999999999999998 14.35008439932483,53.90840812150692,9.999999999999998 14.20836929242294,53.96800739651322,9.999999999999998 </coordinates>
+14.20836929242294,53.96800739651322,0 13.95567825452436,53.72305396266369,0 14.23246686462305,53.71073744818122,0 14.4932808085603,53.20905652187469,0 14.10994127272899,52.87968515635188,0 14.61899923738535,52.56249996380388,0 14.73689066024957,52.13117798047203,0 14.78742360234828,51.52154725011579,0 14.72171626571382,50.85313986407172,0 14.98834380044683,50.86906643719593,0 15.0005753031197,50.98822162076294,0 15.2643399911873,50.96899654395492,0 15.39585100597901,50.78203544389281,0 15.92375818692055,50.67610564681247,0 16.23387621381396,50.64874659448364,0 16.41724139467303,50.58466917962758,0 16.20814068769018,50.43251131281313,0 16.69300614122732,50.09913901716746,0 17.01978746608216,50.23707789293351,0 16.87765339045117,50.40763446797394,0 16.87766865223679,50.43690350469472,0 17.44889710498788,50.26155490950591,0 17.70452024630369,50.31468106712745,0 17.75688267137448,50.22322956837992,0 17.60045488469628,50.1613299655493,0 17.87679540655047,49.95360143379026,0 18.03642925161724,50.03358377193086,0 18.56286531146114,49.9043925016492,0 18.84980000370187,49.52248301924221,0 19.19439190987983,49.41841518090882,0 19.47437875449597,49.61416678081866,0 19.76536000308687,49.40056768556595,0 19.77269127883558,49.21027016834837,0 20.06385223339915,49.19312979179767,0 20.3806721565384,49.41377696781503,0 20.91811345254335,49.31853587880599,0 21.0827213014834,49.40939308751065,0 21.5952450710535,49.43402341447745,0 22.04335521531638,49.26212713013246,0 22.52848772142987,49.08136284738714,0 22.89033746691035,49.01416281064083,0 22.72978034347045,49.1748127619081,0 22.65747431283516,49.51637421519234,0 23.62690362071646,50.30942491656871,0 24.02332425374827,50.39017607981684,0 24.05954566834723,50.70885131865828,0 23.63558584275383,51.4991698236445,0 23.53420712064167,51.7450500323055,0 23.6663209923618,52.027769184074,0 23.19677310332287,52.2556551988884,0 23.5237108769084,52.57485469237736,0 23.95486053509359,52.6936865358595,0 23.90285331670409,53.14481745351296,0 23.52641492082142,53.93123129936039,0 23.42571932257906,54.18500282853847,0 22.85854097432528,54.40302222236617,0 22.80361546989329,54.3732875407666,0 21.43222608644395,54.3254598149375,0 19.63282868389118,54.45946986155565,0 19.49331246614281,54.38919146693009,0 19.35342837638731,54.36185401260746,0 19.16313806945453,54.3379907157755,0 18.99039603800854,54.34004948606086,0 18.7970501929281,54.35841634443474,0 18.63292723445576,54.41206258190647,0 18.54851899737413,54.52738226374592,0 18.52020564844972,54.65000079099997,0 18.40267650832594,54.74369618510803,0 18.42628929278024,54.77180183173129,0 18.63262048647626,54.70717449102951,0 18.81651450273873,54.60359091558659,0 18.84641091449075,54.61501524664887,0 18.75567335396801,54.67213296390388,0 18.58404447475638,54.74536008893685,0 18.3284895559939,54.82394824557197,0 18.11533116416851,54.8321189578313,0 17.90363861851704,54.82373784814909,0 17.5136065760715,54.75558122874279,0 17.08058643889143,54.67937507288313,0 16.82068737873435,54.57236247924572,0 16.60469166424747,54.54308572843939,0 16.46128823198309,54.50464958646638,0 16.16670244278508,54.28887606797408,0 15.94158690609389,54.25357394210936,0 15.3196047544306,54.13577072152809,0 14.9265246914733,54.0623393360287,0 14.67253548594002,54.01517524914691,0 14.45669277211209,53.93436131402619,0 14.35008439932483,53.90840812150692,0 14.20836929242294,53.96800739651322,0 </coordinates>
 				</LinearRing>
 			</outerBoundaryIs>
 		</Polygon>
